Fix blis version conflict for deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.3.2
 blis==0.7.9
+gunicorn
 spacy==3.7.2
 pydub==0.25.1
 audioread==3.0.1
 annotated-types==0.7.0
 blinker==1.9.0
-gunicorn
+git+https://github.com/openai/whisper.git
